[gd_scene load_steps=6 format=3 uid="uid://v0boiv1ojoea"]

[ext_resource type="Script" path="res://scripts/draggable_object.gd" id="1_g8lg4"]
[ext_resource type="FontFile" uid="uid://dvwmengwruy7d" path="res://assets/recharge bd.otf" id="2_g65o7"]
[ext_resource type="Texture2D" uid="uid://bh06nb18abc4g" path="res://assets/ui_pack/PNG/Double/button_brown.png" id="2_iux4l"]

[sub_resource type="LabelSettings" id="LabelSettings_661d0"]
font = ExtResource("2_g65o7")
font_size = 18
font_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdxgw"]
size = Vector2(192, 56)

[node name="draggable_object" type="Node2D" groups=["Draggable"]]
script = ExtResource("1_g8lg4")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -113.0
offset_top = -41.0
offset_right = 114.0
offset_bottom = 39.0
texture = ExtResource("2_iux4l")

[node name="Label" type="Label" parent="."]
z_index = 100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -16.0
offset_right = 36.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "True"
label_settings = SubResource("LabelSettings_661d0")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_qdxgw")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
